Name: Hcpihs
Version: 0.0.1
Cabal-version: >= 1.6
License: OtherLicense
Author: Christoph "Hammy" Stahl
Maintainer: christoph.stahl@uni-dortmund.de
Stability: alpha
Category: Network
Synopsis: Implementation of the Hauer Chat Protocol Server and Client in Haskell
Build-type: Simple


Executable hcpraw
    hs-source-dirs: src
    Build-Depends: base, network, split
    main-is: hcpraw.hs

Executable hcpihs
    hs-source-dirs: src
    Build-Depends: base, network, split, containers, Crypto
    main-is: hcpihs.hs

Executable hcpihc
    hs-source-dirs: src
    Build-Depends: base, network, split
    main-is: hcpihc.hs
